--- a/app/views/admins/shared/_error_messages.html.haml
+++ b/app/views/admins/shared/_error_messages.html.haml
@@ -1,6 +1,6 @@
 - if resource.errors.any?
-  #error_explanation.bg-red-100.border-red-500.px-4.py-3.rounded{"data-turbo-cache": "false"}
-    %h2.text-red-700
+  .alert.alert-danger
+    %h4.alert-heading
       = I18n.t("errors.messages.not_saved",
         count: resource.errors.count,
         resource: resource.class.model_name.human.downcase)
