--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -30,7 +30,8 @@
       .alert.alert-danger.mb-0
         = alert
     %nav.navbar.navbar-expand-sm.navbar-dark.bg-dark.mb-3
-      %h2.text-white.ms-2 管理者画面
+      %h2.text-white.ms-2
+        = link_to '管理者画面', admins_products_path, class: 'text-decoration-none text-white'
       .ms-auto.me-2
         .d-inline-block
           - if current_admin
