--- a/app/views/admins/products/index.html.haml
+++ b/app/views/admins/products/index.html.haml
@@ -8,10 +8,7 @@
           .card-body
             .d-flex.align-items-start
               .me-3
-                - if product.image.attached?
-                  = image_tag product.image, class: 'attached_product-img img-fluid'
-                - else
-                  = image_tag 'default_image.jpg', size: '120x80', class: 'product-image img-fluid'
+                = render 'shared/product_image', product: product, size: '120x80', variant: :small
               .flex-grow-1
                 .d-flex.justify-content-between.align-items-start
                   .me-2
