--- a/app/views/admins/products/show.html.haml
+++ b/app/views/admins/products/show.html.haml
@@ -20,7 +20,6 @@
         .card-footer
           .d-flex.justify-content-between
             - if @product.published_at.present?
-              -# TODO: 非公開のリンクは次PRで実装
-              = button_to '非公開にする', '#', method: :delete, data: { turbo_confirm: '非公開にしますか？' }, class: 'btn btn-outline-danger' # TODO: 公開設定の処理を実装したらリンク修正
+              = button_to '非公開にする', admins_product_publish_path(@product), method: :delete, data: { turbo_confirm: '非公開にしますか？' }, class: 'btn btn-outline-danger'
             - else
-              = button_to '公開する', admins_product_publish_path(@product), method: :patch, data: { turbo_confirm: '公開しますか？' }, class: 'btn btn-outline-primary' # TODO: 公開設定の処理を実装したらリンク修正
+              = button_to '公開する', admins_product_publish_path(@product), method: :patch, data: { turbo_confirm: '公開しますか？' }, class: 'btn btn-outline-primary'
