--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -22,3 +22,5 @@
       input_html: { class: 'form-control', autocomplete: "new-password" }
   .actions.mt-3.text-center
     = f.button :submit, "新規登録", class: 'btn btn-primary'
+.text-center.mt-4
+  = render "users/shared/links"
