--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,4 +1,5 @@
 %h2.text-center.mb-4 商品一覧
+
 .container
   .row
     - @products.each do |product|
@@ -11,7 +12,7 @@
               .flex-grow-1
                 .d-flex.justify-content-between.align-items-start
                   .me-2
-                    %h5.card-title= link_to product.name, '#'
+                    %h5.card-title= link_to product.name, product_path(product)
                     %p.card-text
                       価格: #{number_to_currency(product.price)}
   .d-flex.justify-content-center
