--- a/app/views/admins/products/_form.html.haml
+++ b/app/views/admins/products/_form.html.haml
@@ -1,19 +1,12 @@
-= simple_form_for [:admins, product], html: { class: 'container mt-5' } do |f|
-  = render 'admins/shared/error_messages', resource: product
-  .form-group.mt-2
-    = f.label :name, class: "form-label"
-    = f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control"
-  .form-group.mt-2
-    = f.label :price, class: "form-label"
-    = f.number_field :price, class: "form-control", autofocus: true
-  .form-group.mt-2
-    = f.label :description, class: "form-label"
-    = f.text_area :description, class: "form-control"
-  .form-group.mt-2
-    = f.label :image, class: "form-label"
-    = f.file_field :image, class: "form-control"
-  .form-group.mt-2
-    = f.label :position, class: "form-label"
-    = f.number_field :position, autocomplete: "position", class: "form-control"
-  .form-group.mt-2.text-center
-    = f.submit text, class: "btn btn-primary mt-2"
+.container
+  .card
+    .card-body
+      = simple_form_for [:admins, product] do |f|
+        = render 'admins/shared/error_messages', resource: product
+        = f.input :name
+        = f.input :price
+        = f.input :description
+        = f.input :image
+        = f.input :position
+        .mt-2.text-center
+          = f.submit text, class: "btn btn-primary mt-2"
