--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,26 +1,15 @@
 %h2.text-center.mb-4 新規登録
 
-= simple_form_for(resource, as: resource_name, url: user_registration_path, html: { class: 'container mt-5' }) do |f|
-  = render 'admins/shared/error_messages', resource: resource
-  .form-group
-    = f.input :name,
-      required: false,
-      autofocus: true,
-      input_html: { class: 'form-control', autocomplete: "name" }
-  .form-group
-    = f.input :email,
-      required: false,
-      autofocus: true,
-      input_html: { class: 'form-control', autocomplete: "email" }
-  .form-group
-    = f.input :password,
-      required: false,
-      input_html: { class: 'form-control', autocomplete: "new-password" }
-  .form-group
-    = f.input :password_confirmation,
-      required: false,
-      input_html: { class: 'form-control', autocomplete: "new-password" }
-  .actions.mt-3.text-center
-    = f.button :submit, "新規登録", class: 'btn btn-primary'
+.container
+  .card
+    .cart-body.p-4
+      = simple_form_for(resource, as: resource_name, url: user_registration_path) do |f|
+        = render 'admins/shared/error_messages', resource: resource
+        = f.input :name
+        = f.input :email
+        = f.input :password
+        = f.input :password_confirmation
+        .mt-2.text-center
+          = f.button :submit, "新規登録", class: 'btn btn-primary'
 .text-center.mt-4
   = render "users/shared/links"
