--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -1,12 +1,25 @@
+%h2.text-center.mb-4 カート
+
 - if current_cart.cart_items.any?
-  - current_cart.cart_items.each do |cart_item|
-    = cart_item.product.name
-    = cart_item.product.price
-    = cart_item.quantity
-    = cart_item.total_price
-    = simple_form_for cart_item, url: product_cart_item_path(cart_item.product_id, cart_item.id) do |f|
-      = f.input :quantity
-      = f.button :submit, class: 'btn btn-primary'
-    = button_to '削除', product_cart_item_path(cart_item.product_id, cart_item.id), method: :delete, data: {turbo_confirm: '本当に削除しますか？' }, class: 'btn btn-danger'
+  %table.table
+    %thead
+      %tr
+        %th{ scope: "col" } 商品名
+        %th{ scope: "col" } 単価
+        %th{ scope: "col" } 数量
+        %th{ scope: "col" } 単価x数量
+        %th{ scope: "col" }
+    %tbody.table-group-divider
+      - current_cart.cart_items.each do |cart_item|
+        %tr
+          %td= cart_item.product.name
+          %td= cart_item.product.price
+          %td
+            = simple_form_for cart_item, url: product_cart_item_path(cart_item.product_id, cart_item.id) do |f|
+              .d-flex.mb-0
+                = f.input :quantity, label: false
+                = f.button :submit, class: 'btn btn-sm btn-primary'
+          %td= cart_item.total_price
+          %td= button_to '削除', product_cart_item_path(cart_item.product_id, cart_item.id), method: :delete, data: {turbo_confirm: '本当に削除しますか？' }, class: 'btn btn-danger'
 - else
   %p.text-center 商品は追加されていません。
