--- a/app/views/carts/show.html.haml
+++ b/app/views/carts/show.html.haml
@@ -1,25 +1,38 @@
 %h2.text-center.mb-4 カート
 
-- if current_cart.cart_items.any?
-  %table.table
-    %thead
-      %tr
-        %th{ scope: "col" } 商品名
-        %th{ scope: "col" } 単価
-        %th{ scope: "col" } 数量
-        %th{ scope: "col" } 単価x数量
-        %th{ scope: "col" }
-    %tbody.table-group-divider
-      - current_cart.cart_items.each do |cart_item|
+.container
+  - if current_cart.cart_items.any?
+    %table.table
+      %thead
         %tr
-          %td= cart_item.product.name
-          %td= cart_item.product.price
-          %td
-            = simple_form_for cart_item, url: product_cart_item_path(cart_item.product_id, cart_item.id) do |f|
-              .d-flex.mb-0
-                = f.input :quantity, label: false
-                = f.button :submit, class: 'btn btn-sm btn-primary'
-          %td= cart_item.total_price
-          %td= button_to '削除', product_cart_item_path(cart_item.product_id, cart_item.id), method: :delete, data: {turbo_confirm: '本当に削除しますか？' }, class: 'btn btn-danger'
-- else
-  %p.text-center 商品は追加されていません。
+          %th{ scope: "col" } 商品名
+          %th{ scope: "col" } 単価
+          %th{ scope: "col" } 数量
+          %th{ scope: "col" } 単価x数量
+      %tbody.table-group-divider
+        - current_cart.cart_items.each do |cart_item|
+          %tr
+            %td= cart_item.product.name
+            %td= number_to_currency(cart_item.product.price)
+            %td
+              = simple_form_for cart_item, url: product_cart_item_path(cart_item.product_id, cart_item.id) do |f|
+                .d-flex.mb-0
+                  = f.input :quantity, label: false
+                  = f.button :submit, class: 'btn btn-sm btn-primary'
+            %td= number_to_currency(cart_item.total_price)
+            %td= button_to '削除', product_cart_item_path(cart_item.product_id, cart_item.id), method: :delete, data: {turbo_confirm: '本当に削除しますか？' }, class: 'btn btn-danger'
+    .card
+      .card-body
+        .row
+          .col-6.text-start 小計:
+          .col-6.text-end #{number_to_currency(current_cart.subtotal)}
+          .col-6.text-start 代引き手数料:
+          .col-6.text-end #{number_to_currency(current_cart.cash_on_delivery_fee)}
+          .col-6.text-start 送料:
+          .col-6.text-end #{number_to_currency(current_cart.calculate_shipping_fee)}
+          .col-6.text-start 消費税:
+          .col-6.text-end #{number_to_currency(current_cart.tax_price)}
+          .col-6.text-start.fw-bold 合計金額:
+          .col-6.text-end.fw-bold #{number_to_currency(current_cart.total_price)}
+  - else
+    %p.text-center 商品は追加されていません。
